# retailvelocity

./: .gitignore  README.md  explainer.md  project_overview.md  pyproject.toml
.github/workflows/: ci.yml
app/: Home.py
app/pages/: 1_Trends.py  2_RFM_Segments.py  3_Cohort_Retention.py  4_Forecast.py  5_Prescriptive.py
notebooks/: 01_retailvelocity_walkthrough.ipynb
src/retailvelocity/: __init__.py  benchmarks.py  cli.py  cohort.py  config.py  data_gen.py  descriptive.py  forecasting.py  ingestion.py  prescriptive.py  rfm.py
tests/: conftest.py  test_cohort.py  test_data_gen.py  test_descriptive.py  test_forecasting.py  test_ingestion.py  test_prescriptive.py  test_rfm.py
